@@ -2,6 +2,9 @@
 
 - Cloning a type with coercions defined on it would cause an exception.
 
+- Creating a subtype of a special type created by *_isa_type, *_can_type, or
+  *_does_type, or enum would die when trying to inline type constraint.
+
 
 0.26     2016-09-24
 
